# genesis-ai

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  README.md  setup-backend.bat  start-backend.bat  start-celery.bat  start-frontend.bat  start-task-monitor.bat
genesis-ai-platform/: .env.example  README.md  celerybeat-schedule.dir  generate_admin_password.py  main.py  pyproject.toml  test_local_storage.py  test_login_and_refresh.py  test_ocr_engines.py  test_password_validation.py  uv.toml
genesis-ai-platform/api/: crud_registry.py
genesis-ai-platform/api/v1/: __init__.py  (+27 more)
genesis-ai-platform/core/: __init__.py  base_router.py  base_service.py  crud_factory.py  exceptions.py  logging_config.py  response.py
genesis-ai-platform/docs/: FILE_UPLOAD_IMPLEMENTATION.md  FILE_UPLOAD_REFACTORING.md  STORAGE_IMPLEMENTATION.md  zip-upload-and-image-handling.md  存储驱动使用说明.md  文档软删除使用指南.md  新表快速接入指南.md  权限控制-快速参考.md  权限控制使用指南.md
genesis-ai-platform/examples/: custom_query_example.py
genesis-ai-platform/integrations/: __init__.py  model_platform.py
genesis-ai-platform/middleware/: __init__.py  auth_middleware.py  validation_middleware.py
genesis-ai-platform/models/: __init__.py  audit_log.py  base.py  chat_message.py  chat_session.py  chat_space.py  chat_turn.py  chunk.py  chunk_search_unit.py  document.py  folder.py  kb_doc_parse_attempt.py  kb_doc_runtime.py  kb_glossary.py  kb_qa_row.py  kb_synonym.py  kb_synonym_variant.py  kb_table_row.py  kb_web_page.py  kb_web_page_version.py  kb_web_sync_run.py  kb_web_sync_schedule.py  knowledge_base.py  knowledge_base_document.py  model_adapter_binding.py  model_invocation_log.py  model_provider_definition.py  model_sync_record.py  organization.py  permission.py  platform_model.py  resource_tag.py  retrieval_profile.py  role.py  role_permissions.py  tag.py  task.py  tenant.py  tenant_default_model.py  tenant_model.py  (+6 more)
genesis-ai-platform/rag/: __init__.py  doc_summary_utils.py  enums.py  model_configs.json  pgvector_utils.py  schema.py  search_units.py
genesis-ai-platform/repositories/: __init__.py  base.py  user_repo.py
genesis-ai-platform/schemas/: __init__.py  auth.py  chat.py  chunk.py  common.py  dictionary.py  document.py  folder.py  kb_qa_row.py  kb_table_row.py  kb_web_sync.py  knowledge_base.py  model_platform.py  organization.py  permission.py  profile.py  role.py  tag.py  task.py  tenant.py  user.py
genesis-ai-platform/scripts/: __init__.py  check_db_connections.py  create_initial_data.py  generate_password_hash.py  generate_secret_key.py  hash_password_simple.py  init_permissions.py  init_super_admin.py  install_dependencies.ps1  test_auth.py  test_auth_flow.py  test_password_validator.py  warm_permission_cache.py
genesis-ai-platform/services/: __init__.py  auth_service.py  chunk_service.py  dictionary_service.py  document_service.py  folder_service.py  folder_tag_service.py  kb_doc_tag_service.py  kb_document_parse_service.py  kb_tag_service.py  knowledge_base_service.py  model_platform_service.py  organization_service.py  password_service.py  permission_service.py  profile_service.py  qa_dataset_service.py  role_service.py  table_dataset_service.py  tag_service.py  task_service.py  tenant_service.py  user_service.py  web_content_extractor.py  web_sync_service.py
genesis-ai-platform/tasks/: __init__.py  celery_tasks.py  cleanup_sessions.py  cleanup_tasks.py  cleanup_zombie_tasks.py  web_sync_tasks.py
genesis-ai-platform/templates/: README.md  qa_import_template.csv  table_import_sample.csv
genesis-ai-platform/tests/: __init__.py
genesis-ai-platform/utils/: README.md  __init__.py  password.py  qa_markdown.py  request_utils.py
(+696 files in other folders)
