[project]
name = "genesis-ai-platform"
version = "0.1.0"
description = "启元AI平台 - 企业级RAG知识库系统"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.2",
    "fastapi>=0.128.0",
    "fastapi-users[oauth,redis,sqlalchemy]>=15.0.3",
    "fastcrud>=0.20.1",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "langchain>=1.2.2",
    "llama-index>=0.14.12",
    "llama-index-embeddings-dashscope>=0.4.1",
    "llama-index-llms-openai-like>=0.5.3",
    "msgpack>=1.1.2",
    "passlib[argon2,bcrypt]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.2.1,<5.0.0",
    "pillow>=11.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.21",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "python-dotenv>=1.2.1",
    "plotly>=6.5.1",
    "matplotlib>=3.10.8",
    "boto3>=1.36.0",
    "aioboto3>=15.5.0",
    "tiktoken>=0.12.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "linkify-it-py>=2.0.3",
    "pytesseract>=0.3.13",
    "aiofiles>=25.1.0",
    "chardet<6",
    "pypdfium2>=5.5.0",
    "pdfplumber>=0.11.9",
    "langchain-community>=0.4.1",
    "litellm>=1.82.4",
    "trafilatura>=2.0.0",
    "playwright>=1.58.0",
    "readability-lxml>=0.8.4.1",
    "croniter>=6.2.2",
    "xlrd>=2.0.2",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
ocr_paddle = [
    # 可选 OCR 增强依赖：默认不开启，按需安装
    "paddleocr[doc-parser]>=3.4.0",
    "paddlepaddle>=3.3.0",
]
pdf_docling = [
    # 可选 PDF 深度解析依赖：默认不开启，按需安装
    "docling>=2.74.0",
]
qdrant = [
    "qdrant-client>=1.12.0",
]
xinchuang = [
    # 信创数据库驱动（按需安装）
    # "KingbaseES>=1.0.0",      # 人大金仓
    # "dmPython>=2.3.0",         # 达梦
]
all = [
    "genesis-ai-platform[dev,qdrant,xinchuang,ocr_paddle,pdf_docling]",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip-licenses>=5.5.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "kombu.*",
    "langchain.*",
    "llama_index.*",
    "paddleocr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
